# Carvo_Backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.celery  celerybeat-schedule  design.md  manage.py  pyproject.toml
Carvo/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
accounts/: models.py
accounts/migrations/: 0001_initial.py  0002_remove_rental_car_remove_carimage_car_and_more.py
api/: email_serivce.py  emails.py  serializers.py  urls.py  views.py
payments/: paypal_config.py  services.py  webhooks.py
rental/: admin.py  apps.py  models.py  tasks.py
rental/migrations/: 0001_initial.py  0002_alter_rental_status.py  0002_payment_paypal_payment_id.py  0003_alter_payment_payment_method.py  0003_branch_rental_fuel_rental_dropoff_branch_and_more.py  0004_alter_payment_payment_method.py  0004_car_fuel.py  0005_car_current_branch.py  0006_alter_car_current_branch.py  0007_remove_payment_paypal_payment_id_and_more.py
