[project]
name = "carvo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.1",
    "django-environ>=0.12.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "cloudinary>=1.41.0",
    "django-cloudinary-storage>=0.3.0",
    "faker>=33.1.0",
]
